added PNG to commit

--- a/index.Rmd
+++ b/index.Rmd
@@ -17,14 +17,13 @@ I am interested in exploring the relationship between oil and politics. If I can
 
 Does the presence of oil wealth increase the chance of civil war in any given country? In this study, I will examine whether or not countries whose oil exports make up a significant portion of GDP are more inclined toward civil war than those with economies less dependent on oil. I hypothesize that oil wealth decreases the incidence of civil war. I expect countries with oil wealth to be more authoritarian and have stronger state capacity. I would expect the governments of these countries to clamp down on dissent before the point of civil war and thus be fairly insulated from it. The basic unit of analysis will be a country and I will be using Civil Wars dataset posted on the GOV50 website. The explanatory variable is whether or not the country has a significant amount of oil, defined in my data as a country with 1/3 of export revenues coming from oil. This is coded as 1 if true and 0 if not. My outcome variable is whether or not there was a civil war in that country, 1 if so and 0 if not. This outcome variable is currently given by year, but I will likely merge years into decades or similar larger unit of measurement. If I observe less incidence of civil war in countries with significant oil then my hypothesis will be proven correct. If I observe more civil wars in countries with oil than those without, or no difference between them, then my hypothesis will be proven incorrect. 
 
-```{r}
+## Visualization 1
+
+
+```{r echo = FALSE}
 library(tidyverse)
 civilwar <- read_csv("civilwar.csv")
 
-head(civilwar)
-
-civilwar |>
-  filter(war ==1)
 
 civilwar <- civilwar |>
   mutate(decade = case_when(
@@ -52,7 +51,7 @@ civilwar_counts <- civilwar |>
             years_with_oil = sum(Oil))
 
 
-civilwar_counts
+#civilwar_counts
 
 plot <- civilwar_counts |>
   ggplot(mapping = aes(x = years_with_oil, y = years_at_war)) +
